--- a/instituicao/cursos/turmas/grupo/style.css
+++ b/instituicao/cursos/turmas/grupo/style.css
@@ -18,10 +18,11 @@ body {
     flex-direction: column;
     justify-content: space-between;
     height: 90vh;
-    max-width: 80vw;
+    max-width: 85vw;
     font-family: "Poppins", sans-serif;
     color: #272727;
     align-self: center;
+    width: 85vw;
 }
 
 .grupo h1 {
@@ -165,6 +166,7 @@ body {
     border-radius: 100px;
     font-size: 20px;
     font-weight: 300;
+    padding: 0 10px;
 }
 
 .progress {
