--- a/home/componentes/header/styles_header.css
+++ b/home/componentes/header/styles_header.css
@@ -18,7 +18,7 @@ button {
     list-style: none;
     text-decoration: none;
     color: #fff;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 500;
 }
 
@@ -26,12 +26,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10%;
+    padding: 1% 3%;
     width: 100%;
 }
 
 header img {
-    width: 72px;
+    width: 100%;
 }
 
 .navegacao {
