--- a/aluno/tarefas/tarefas.css
+++ b/aluno/tarefas/tarefas.css
@@ -43,7 +43,6 @@ input {
 
 .header {
     margin: 20px 0 20px 0;
-    /* background: bisque; */
 }
 
 .header ul {
@@ -91,20 +90,26 @@ input {
 }
 
 #container-tarefas {
-    position: relative;
     display: flex;
-    z-index: 0;
     padding: 30px 0 30px 30px;
     gap: 50px;
-    width: 100%;
-    height: 750px;
-    background-color: aquamarine;
-    /* overflow-x: auto; */
+    width: calc(100% - 350px);
+    /* background-color: aquamarine; */
+    overflow-x: auto;
+}
+
+#container-tarefas::-webkit-scrollbar {
+    height: 10px;
+    margin-bottom: 5px;
+}
+  
+#container-tarefas::-webkit-scrollbar-thumb {
+    background-color: #05204a;
+    border-radius: 10px;
+    border: none;
 }
 
 #container-topicos {
-    position: fixed;
-    z-index: 20;
     right: 0;
     display: flex;
     flex-direction: column;
@@ -195,7 +200,7 @@ input {
 .topico {
     display: flex;
     flex-direction: column;
-    background: tomato;
+    min-width: 350px;
     gap: 25px;
     overflow-y: auto;
     padding: 0 10px 0 10px;
@@ -271,22 +276,10 @@ input {
 .topico::-webkit-scrollbar {
     height: 10px;
     width: 12px;
-  }
+}
   
-  .topico::-webkit-scrollbar-thumb {
+.topico::-webkit-scrollbar-thumb {
     background-color: #05204a;
     border-radius: 10px;
     border: none;
-  }
-  
-  .container-geral::-webkit-scrollbar {
-    height: 10px;
-    width: 12px;
-  }
-  
-  .container-geral::-webkit-scrollbar-thumb {
-    background-color: #05204a;
-    border-radius: 10px;
-    border: none;
-  }
-  
+}
