--- a/aluno/tarefas/tarefas.css
+++ b/aluno/tarefas/tarefas.css
@@ -1,372 +1,390 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    font-family: "Poppins", sans-serif;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: "Poppins", sans-serif;
 }
 
 .bg {
-    position: fixed;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-    display: none;
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.658);
-  }
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-blend-mode: darken;
+  background-color: rgba(0, 0, 0, 0.658);
+}
 
 main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    /* background: tomato; */
-    padding-left: 78px;
-    overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  /* background: tomato; */
+  padding-left: 78px;
+  overflow-y: hidden;
 }
 
 button {
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
 }
 
-input, select, option {
-    font-family: "Poppins", sans-serif;
+input,
+select,
+option {
+  font-family: "Poppins", sans-serif;
 }
 
 .header {
-    margin: 20px 0 20px 0;
+  margin: 20px 0 20px 0;
 }
 
 .header ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    text-decoration: none;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  text-decoration: none;
 }
 
 .header ul li {
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    padding: 13px 15px;
-    border: 1px solid #657895;
-    color: #657895;
-    font-weight: bold;
-    transform: all 0.2s ease;
-    cursor: pointer;
-    transition: 0.3s;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  padding: 13px 15px;
+  border: 1px solid #657895;
+  color: #657895;
+  font-weight: bold;
+  transform: all 0.2s ease;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .header ul li:first-child {
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 
 .header ul li:last-child {
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 
 .header ul li:hover,
 .header ul li.ativo {
-    background-color: #044177;
-    color: #fff;
+  background-color: #044177;
+  color: #fff;
 }
 
 .container-geral,
 .container-geral-tarefas-gerais {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    /* background: #000; */
-    overflow-x: auto;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* background: #000; */
+  overflow-x: auto;
 }
 
 .container-geral-tarefas-gerais {
-    display: none;
+  display: none;
 }
 
 #container-tarefas,
 #container-tarefas-gerais {
-    display: flex;
-    padding: 30px 0 30px 30px;
-    gap: 50px;
-    width: calc(100% - 350px);
-    /* background-color: aquamarine; */
-    overflow-x: auto;
+  display: flex;
+  padding: 30px 0 30px 30px;
+  gap: 50px;
+  width: calc(100% - 350px);
+  /* background-color: aquamarine; */
+  overflow-x: auto;
 }
 
 #container-tarefas::-webkit-scrollbar,
 #container-tarefas-gerais::-webkit-scrollbar {
-    height: 10px;
-    margin-bottom: 5px;
+  height: 10px;
+  margin-bottom: 5px;
 }
-  
+
 #container-tarefas::-webkit-scrollbar-thumb,
 #container-tarefas-gerais::-webkit-scrollbar-thumb {
-    background-color: #05204a;
-    border-radius: 10px;
-    border: none;
+  background-color: #05204a;
+  border-radius: 10px;
+  border: none;
 }
 
 #container-topicos {
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    width: 350px;
-    height: 100%;
-    background-color: #fff;
-    padding: 30px;
-    border-left: 3px solid #044177;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 100%;
+  background-color: #fff;
+  padding: 30px;
+  border-left: 3px solid #044177;
 }
 
-.botao-add-topico{
-    border: solid 1px #044177;
-    background-color: #04417700;
-    border-radius: 30px;
-    font-weight: 700;
-    padding: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
+.botao-add-topico {
+  border: solid 1px #044177;
+  background-color: #04417700;
+  border-radius: 30px;
+  font-weight: 700;
+  padding: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
-.botao-add-topico img{
-    margin-right: 0.5rem;
+.botao-add-topico img {
+  margin-right: 0.5rem;
 }
 
 .modal-add-topico,
 .modal-add-tarefa {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    background-color:#F4F4F4;
-    border-radius: 20px;
-    align-items: center;
-    margin-top: 1rem;
-  }
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  background-color: #F4F4F4;
+  border-radius: 20px;
+  align-items: center;
+  margin-top: 1rem;
+}
 
-  .modal-add-tarefa {
-      margin: 0;
-  }
-  
-  .modal-add-topico input,
-  .modal-add-tarefa input,
-  .modal-add-tarefa select,
-  .modal-infos-tarefa input,
-  .modal-infos-tarefa select {
-    background-color: #e3e3e3;
-    border-radius: 10px;
-    border: none;
-    border-bottom: 1px solid #05204a;
-    padding: 10px;
-    margin: 1rem 0 1rem 0;
-    width: 85%;
-  }
+.modal-add-tarefa {
+  margin: 0;
+}
 
-  .modal-add-tarefa input,
-  .modal-add-tarefa select {
-    margin: 0.75rem 0 0.75rem 0 !important;
-  }
+.modal-add-topico input,
+.modal-add-tarefa input,
+.modal-add-tarefa select,
+.modal-infos-tarefa input,
+.modal-infos-tarefa select,
+.div-atribuir-aluno {
+  background-color: #e3e3e3;
+  border-radius: 10px;
+  border: none;
+  border-bottom: 1px solid #05204a;
+  padding: 10px;
+  margin: 1rem 0 1rem 0;
+  width: 85%;
+}
 
-  .modal-add-topico .botao-criar-topico,
-  .modal-add-tarefa .botao-criar-tarefa{
-    border-radius: 0 0 20px 0px;
-    width: 50%;
-    background-color: rgba(240, 248, 255, 0);
-    color: white;
-    background-color: #044177;
-    font-weight: 700;
-    border: none;
-    padding: 15px;
-  }
-  
-  .modal-add-topico .botao-cancelar-topico,
-  .modal-add-tarefa .botao-cancelar-tarefa{
-    border-radius: 0 0 0 20px;
-    width: 50%;
-    background-color: rgba(240, 248, 255, 0);
-    color: white;
-    background-color: #e3e3e3;
-    font-weight: 700;
-    border: none;
-    padding: 15px;
-  }
+.modal-add-tarefa input,
+.modal-add-tarefa select {
+  margin: 0.75rem 0 0.75rem 0 !important;
+}
 
-  .buttons-topico,
-  .buttons-tarefa {
-    display: flex;
-    width: 100%;
+.modal-add-topico .botao-criar-topico,
+.modal-add-tarefa .botao-criar-tarefa {
+  border-radius: 0 0 20px 0px;
+  width: 50%;
+  background-color: rgba(240, 248, 255, 0);
+  color: white;
+  background-color: #044177;
+  font-weight: 700;
+  border: none;
+  padding: 15px;
+}
+
+.modal-add-topico .botao-cancelar-topico,
+.modal-add-tarefa .botao-cancelar-tarefa {
+  border-radius: 0 0 0 20px;
+  width: 50%;
+  background-color: rgba(240, 248, 255, 0);
+  color: white;
+  background-color: #e3e3e3;
+  font-weight: 700;
+  border: none;
+  padding: 15px;
+}
+
+.div-atribuir-aluno {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+}
+
+.div-atribuir-aluno img {
+  width: 20px;
+}
+
+#imgSeta {
+  margin-left: 118px;
+}
+
+.buttons-topico,
+.buttons-tarefa {
+  display: flex;
+  width: 100%;
 }
 
 .topico {
-    display: flex;
-    flex-direction: column;
-    min-width: 350px;
-    gap: 25px;
-    overflow-y: auto;
-    padding: 0 10px 0 10px;
-    width: 350px;
+  display: flex;
+  flex-direction: column;
+  min-width: 350px;
+  gap: 25px;
+  overflow-y: auto;
+  padding: 0 10px 0 10px;
+  width: 350px;
 }
 
 .header-topico {
-    width: 100%;
-    /* background-color: #657895; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  width: 100%;
+  /* background-color: #657895; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .header-topico img {
-    width: 34px;
-    margin-left: 1rem;
-    cursor: pointer;
+  width: 34px;
+  margin-left: 1rem;
+  cursor: pointer;
 }
 
 .tarefa {
-    display: flex;
-    flex-direction: column;
-    border: solid 1px #044177;
-    border-radius: 30px;
-    padding: 20px;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  border: solid 1px #044177;
+  border-radius: 30px;
+  padding: 20px;
+  gap: 20px;
 }
 
 .header-tarefa {
-    display: flex;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
-.header-tarefa p{
-    margin-left: 10px;
-    cursor: pointer;
+.header-tarefa p {
+  margin-left: 10px;
+  cursor: pointer;
 }
 
 .header-tarefa img {
-    margin-left: 65px;
+  margin-left: 65px;
 }
 
 .progress {
-    width: 30px;
-    height: 30px;
-    border-radius: 100px;
-    border: solid #044177;     
-    transform: rotate(270deg);
-    cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 100px;
+  border: solid #044177;
+  transform: rotate(270deg);
+  cursor: pointer;
 }
 
 .progress-bar {
-    background-color: #044177;
-    position: relative;
-    z-index: 100;
+  background-color: #044177;
+  position: relative;
+  z-index: 100;
 }
 
 .prioridade-tarefa {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    gap: 15px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  gap: 15px;
 }
 
-.header-tarefa img{
-    width: 34px;
-    cursor: pointer;
+.header-tarefa img {
+  width: 34px;
+  cursor: pointer;
 }
 
 .topico::-webkit-scrollbar {
-    height: 10px;
-    width: 12px;
+  height: 10px;
+  width: 12px;
 }
-  
+
 .topico::-webkit-scrollbar-thumb {
-    background-color: #05204a;
-    border-radius: 10px;
-    border: none;
+  background-color: #05204a;
+  border-radius: 10px;
+  border: none;
 }
 
 .modal-infos-tarefa {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    z-index: 999999;
-    transform: translate(-50%, -50%);
-    background-color: rgb(255, 255, 255);
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Poppins", sans-serif;
-    border-radius: 20px;
-    padding: 20px;
-    width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  z-index: 999999;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  border-radius: 20px;
+  padding: 20px;
+  width: 60%;
 }
 
 .modal-infos-tarefa input,
 .modal-infos-tarefa select {
-    width: 100%;
-    margin: 0;
-    font-family: "Poppins", sans-serif;
+  width: 100%;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 .modal-infos-tarefa h1 {
-    font-size: 42px;
+  font-size: 42px;
 }
 
 .modal-infos-tarefa label {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .form-infos-tarefa {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    margin-top: 20px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 20px;
+  width: 100%;
 }
 
 .container-inputs-modal-tarefa {
-    display: flex;
-    gap: 20px;
-    width: 100%;
-    /* background: #000; */
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  /* background: #000; */
 }
 
 .input-modal-tarefa {
-    display: flex;
-    flex-direction: column;
-    width: 33.3%;
+  display: flex;
+  flex-direction: column;
+  width: 33.3%;
 }
 
 .container-inputs-data-modal {
-    display: flex;
-    gap: 20px;
-    width: 100%;
+  display: flex;
+  gap: 20px;
+  width: 100%;
 }
 
 .input-data-modal {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 .buttons-modal-tarefa {
-    display: flex;
-    width: 100%;
-    flex-direction: row-reverse;
-    gap: 10px;
-    width: 100%;
+  display: flex;
+  width: 100%;
+  flex-direction: row-reverse;
+  gap: 10px;
+  width: 100%;
 }
 
 .btn-cancelar-modal-tarefa,
@@ -381,128 +399,128 @@ input, select, option {
 }
 
 .btn-salvar-modal-tarefa {
-    background-color: #044177;
+  background-color: #044177;
 }
 
 .modal-opcoes-topico,
 .modal-alterar-cor-topico,
 .modal-opcoes-tarefa,
 .modal-alterar-cor-tarefa {
-    position: absolute;
-    display: none;
-    border-radius: 20px;
-    background-color: #f4f4f4;
-    z-index: 100;
-    margin-left: 290px;
+  position: absolute;
+  display: none;
+  border-radius: 20px;
+  background-color: #f4f4f4;
+  z-index: 100;
+  margin-left: 290px;
 }
 
 .modal-alterar-cor-topico {
-    margin-left: 245px;
-    top: 0px;
+  margin-left: 245px;
+  top: 0px;
 }
 
 .modal-opcoes-tarefa {
-    margin-left: 270px;
+  margin-left: 270px;
 }
 
 .modal-alterar-cor-tarefa {
-    margin-left: 245px;
-    top: 0;
+  margin-left: 245px;
+  top: 0;
 }
 
 .modal-opcoes-topico ul,
 .modal-alterar-cor-topico ul,
 .modal-opcoes-tarefa ul,
 .modal-alterar-cor-tarefa ul {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .modal-opcoes-topico li,
 .modal-alterar-cor-topico li,
 .modal-opcoes-tarefa li,
 .modal-alterar-cor-tarefa li {
-    display: flex;
-    width: 100%;
-    padding: 15px;
-    transition: 0.3s;
-    cursor: pointer;
-    gap: 15px;
-    user-select:none;
+  display: flex;
+  width: 100%;
+  padding: 15px;
+  transition: 0.3s;
+  cursor: pointer;
+  gap: 15px;
+  user-select: none;
 }
 
 .modal-opcoes-topico li:hover,
 .modal-alterar-cor-topico li:hover,
 .modal-opcoes-tarefa li:hover,
 .modal-alterar-cor-tarefa li:hover {
-    background-color: #e3e3e3;
-    border-radius: 20px;
+  background-color: #e3e3e3;
+  border-radius: 20px;
 }
 
 .modal-opcoes-tarefa img {
-    color: #044177;
+  color: #044177;
 }
 
 .selectBox {
-    position: relative;
-  }
-  
-  .selectBox select {
-    width: 100%;
-  }
+  position: relative;
+}
 
-  .overSelect {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-  }
+.selectBox select {
+  width: 100%;
+}
 
-  #checkboxes {
-    display: none;
-    border: 1px #dadada solid;
-  }
-  
-  #checkboxes label {
-    display: block;
-  }
-  
-  #checkboxes label:hover {
-    background-color: #1e90ff;
-  }
+.overSelect {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
 
-  #imgPerfil {
-    object-fit: cover;
-    object-position: center center;
-    border-radius: 50px;
-  }
-  
-  .img-container{
-    display: flex;
-    width: 85%;
-    overflow-x: auto;
-    gap: 10px;
-  }
+#checkboxes {
+  display: none;
+  border: 1px #dadada solid;
+}
 
-  
-  .img-container::-webkit-scrollbar {
-    height: 6px;
-  }
-  
-  .img-container::-webkit-scrollbar-thumb {
-    background-color: #C2C2C2;
-    border-radius: 10px;
-    border: none;
-  }
-  
-  .img-do-container{
-    display: flex;
-  }
+#checkboxes label {
+  display: block;
+}
 
-  /* .delete-user{
+#checkboxes label:hover {
+  background-color: #1e90ff;
+}
+
+.imgPerfil {
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 50px;
+}
+
+.img-container {
+  display: flex;
+  width: 85%;
+  overflow-x: auto;
+  gap: 10px;
+}
+
+
+.img-container::-webkit-scrollbar {
+  height: 6px;
+}
+
+.img-container::-webkit-scrollbar-thumb {
+  background-color: #C2C2C2;
+  border-radius: 10px;
+  border: none;
+}
+
+.img-do-container {
+  display: flex;
+}
+
+/* .delete-user{
     position: relative;
     top: -30%;
     width: 20px;
@@ -510,39 +528,39 @@ input, select, option {
     cursor: pointer;
   } */
 
-  .button-add-user{
-    border: none;
-    background-color: #03a8f400;
-  }
+.button-add-user {
+  border: none;
+  background-color: #03a8f400;
+}
 
-  .amarelo {
-    color: #F8C71A;
-  }
-  
-  .azul {
-    color: #06376A
-  }
-  
-  .verde {
-    color: #3D963B;
-  }
-  
-  .vermelho {
-    color: #DD1313;
-  }
-  
-  .laranja {
-    color: #F98418;
-  }
-  
-  .roxo {
-    color: #9C4EDA;
-  }
-  
-  .rosa {
-    color: #EA5EED;
-  }
-  
-  .preto {
-    color: #000000;
-  }
+.amarelo {
+  color: #F8C71A;
+}
+
+.azul {
+  color: #06376A
+}
+
+.verde {
+  color: #3D963B;
+}
+
+.vermelho {
+  color: #DD1313;
+}
+
+.laranja {
+  color: #F98418;
+}
+
+.roxo {
+  color: #9C4EDA;
+}
+
+.rosa {
+  color: #EA5EED;
+}
+
+.preto {
+  color: #000000;
+}
