--- a/aluno/tarefas/tarefas.css
+++ b/aluno/tarefas/tarefas.css
@@ -27,7 +27,6 @@ main {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  /* background: tomato; */
   padding-left: 78px;
   overflow-y: hidden;
 }
@@ -159,6 +158,7 @@ option {
 }
 
 .modal-add-tarefa {
+  display: none;
   margin: 0;
 }
 
@@ -241,8 +241,13 @@ option {
   width: 100%;
   /* background-color: #657895; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  text-align: center;
+}
+
+.header-topico h2 {
+  width: 400px;
   text-align: center;
 }
 
@@ -412,6 +417,14 @@ option {
   background-color: #f4f4f4;
   z-index: 100;
   margin-left: 290px;
+}
+
+.modal-alterar-cor-topico > ul > li{
+  border-radius: 20px;
+}
+
+.modal-opcoes-topico {
+  margin-left: 330px;
 }
 
 .modal-alterar-cor-topico {
