--- a/aluno/tarefas/tarefas.css
+++ b/aluno/tarefas/tarefas.css
@@ -288,16 +288,23 @@ option {
 }
 
 .progress {
-  width: 30px;
-  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-width: 30px;
+  max-height: 30px;
+  flex-direction: column;
+  display: flex;
   border-radius: 100px;
-  transform: rotate(270deg);
+  align-items: center;
+  justify-content: end;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .progress-bar {
   position: relative;
-  z-index: 100;
+  z-index: 2;
+  width: 30px;
 }
 
 .prioridade-tarefa {
@@ -487,6 +494,8 @@ option {
 
 .modal-opcoes-tarefa img {
   color: #044177;
+  height: 25px;
+  width: 25px;
 }
 
 .selectBox {
