--- a/instituicao/cursos/style.css
+++ b/instituicao/cursos/style.css
@@ -30,7 +30,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    color: #393939;
+    color: #044177;
     font-size: 50px;
     font-weight: 700;
     margin-bottom: 3%;
@@ -152,7 +152,7 @@ body {
 }
 
 .modal h1 {
-    font-size: 70px;
+    font-size: 50px;
     font-weight: 700;
     color: #05204a;
 }
@@ -373,7 +373,7 @@ body {
 }
 
 .modal-curso {
-    width: 40%;
+    width: 45%;
     height: 30vh;
     display: none;
     background-color: rgb(255, 255, 255);
@@ -411,8 +411,8 @@ body {
 }
 
 .modal-excluir {
-    width: 25%;
-    height: 30vh;
+    width: 45%;
+    height: 30%;
     display: none;
     background-color: rgb(255, 255, 255);
     align-items: center;
